# news

./: README.md  app.py  news.py  news_fetcher.py  pyproject.toml
templates/: index.html
