[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.5.1",
    "duckduckgo-search>=8.1.1",
    "feedparser>=6.0.11",
    "lxml[html-clean]>=6.0.0",
    "newspaper3k>=0.2.8",
    "requests>=2.32.4",
]
